group amount of committer by week and month

--- a/templates/amount-of-committers-chart.html
+++ b/templates/amount-of-committers-chart.html
@@ -39,7 +39,7 @@
 <script src="d3.v3.min.js"></script>
 <script>
     var rawData = /*data_placeholder*/
-["\
+                    ["\
 date,amountOfCommitters\n\
 09/01/2001,1\n\
 10/01/2001,1\n\
@@ -501,6 +501,426 @@ date,amountOfCommitters\n\
 13/09/2013,1\n\
 14/09/2013,1\n\
 26/09/2013,1\n\
+",
+"\
+date,amountOfCommitters\n\
+02/01/2000,1\n\
+09/01/2000,1\n\
+08/01/2001,1\n\
+15/01/2001,1\n\
+07/04/2001,1\n\
+14/04/2001,1\n\
+21/05/2001,1\n\
+14/07/2001,1\n\
+30/09/2001,1\n\
+14/10/2001,1\n\
+21/10/2001,2\n\
+28/10/2001,1\n\
+31/10/2001,1\n\
+07/11/2001,1\n\
+14/11/2001,1\n\
+28/12/2001,1\n\
+29/01/2002,1\n\
+07/02/2002,1\n\
+14/02/2002,1\n\
+28/03/2002,3\n\
+31/03/2002,1\n\
+04/04/2002,3\n\
+07/04/2002,2\n\
+21/04/2002,1\n\
+14/06/2002,1\n\
+21/06/2002,2\n\
+28/06/2002,4\n\
+21/07/2002,1\n\
+21/08/2002,3\n\
+28/08/2002,3\n\
+07/09/2002,2\n\
+14/11/2002,1\n\
+21/12/2002,1\n\
+28/02/2003,1\n\
+21/03/2003,1\n\
+21/04/2003,1\n\
+28/05/2003,1\n\
+07/12/2003,1\n\
+14/12/2003,1\n\
+21/12/2003,1\n\
+30/12/2003,1\n\
+14/02/2004,1\n\
+31/05/2004,1\n\
+31/08/2004,1\n\
+07/09/2004,2\n\
+14/09/2004,1\n\
+21/09/2004,1\n\
+14/10/2004,1\n\
+21/10/2004,1\n\
+28/10/2004,3\n\
+07/11/2004,1\n\
+14/11/2004,1\n\
+22/01/2006,1\n\
+14/02/2006,2\n\
+21/02/2006,2\n\
+28/02/2006,1\n\
+07/03/2006,1\n\
+14/03/2006,2\n\
+21/03/2006,1\n\
+28/04/2006,1\n\
+28/05/2006,1\n\
+31/05/2006,1\n\
+21/06/2006,1\n\
+28/06/2006,2\n\
+21/07/2006,1\n\
+31/07/2006,1\n\
+21/08/2006,1\n\
+28/09/2006,1\n\
+07/10/2006,1\n\
+31/10/2006,1\n\
+14/11/2006,2\n\
+21/11/2006,2\n\
+28/11/2006,1\n\
+07/12/2006,1\n\
+14/12/2006,1\n\
+28/12/2006,1\n\
+01/01/2007,1\n\
+05/01/2007,1\n\
+08/01/2007,1\n\
+15/01/2007,1\n\
+22/01/2007,1\n\
+07/02/2007,1\n\
+21/02/2007,1\n\
+28/02/2007,2\n\
+07/03/2007,2\n\
+21/03/2007,1\n\
+28/04/2007,1\n\
+07/05/2007,1\n\
+28/05/2007,1\n\
+07/07/2007,1\n\
+14/07/2007,1\n\
+21/07/2007,1\n\
+07/08/2007,1\n\
+14/08/2007,1\n\
+21/08/2007,1\n\
+28/08/2007,1\n\
+07/09/2007,1\n\
+28/09/2007,1\n\
+30/09/2007,2\n\
+07/10/2007,2\n\
+14/10/2007,1\n\
+21/10/2007,1\n\
+28/10/2007,1\n\
+07/11/2007,1\n\
+14/11/2007,1\n\
+21/11/2007,1\n\
+28/11/2007,1\n\
+07/12/2007,1\n\
+14/12/2007,2\n\
+21/12/2007,1\n\
+28/12/2007,1\n\
+09/01/2008,1\n\
+16/01/2008,1\n\
+30/01/2008,1\n\
+07/02/2008,1\n\
+14/02/2008,1\n\
+21/03/2008,1\n\
+07/04/2008,1\n\
+07/05/2008,1\n\
+14/05/2008,2\n\
+28/05/2008,1\n\
+07/06/2008,1\n\
+14/06/2008,2\n\
+21/06/2008,1\n\
+28/06/2008,2\n\
+30/06/2008,1\n\
+07/07/2008,2\n\
+14/07/2008,1\n\
+21/07/2008,2\n\
+28/07/2008,2\n\
+31/07/2008,2\n\
+07/08/2008,2\n\
+14/08/2008,1\n\
+21/08/2008,2\n\
+31/08/2008,1\n\
+07/09/2008,1\n\
+21/09/2008,1\n\
+14/10/2008,1\n\
+21/10/2008,1\n\
+28/10/2008,1\n\
+07/11/2008,1\n\
+14/11/2008,1\n\
+21/11/2008,2\n\
+14/12/2008,1\n\
+08/01/2009,1\n\
+22/01/2009,2\n\
+29/01/2009,1\n\
+07/02/2009,1\n\
+14/02/2009,1\n\
+28/02/2009,1\n\
+07/03/2009,1\n\
+14/03/2009,1\n\
+07/04/2009,2\n\
+14/04/2009,1\n\
+21/04/2009,1\n\
+28/04/2009,2\n\
+07/05/2009,3\n\
+14/05/2009,1\n\
+28/05/2009,1\n\
+31/05/2009,1\n\
+14/06/2009,1\n\
+30/06/2009,1\n\
+07/07/2009,1\n\
+14/07/2009,1\n\
+21/07/2009,1\n\
+28/07/2009,1\n\
+21/08/2009,2\n\
+21/09/2009,2\n\
+07/10/2009,1\n\
+14/10/2009,1\n\
+21/10/2009,3\n\
+28/10/2009,1\n\
+21/11/2009,1\n\
+28/11/2009,1\n\
+30/11/2009,1\n\
+07/12/2009,1\n\
+14/12/2009,1\n\
+21/12/2009,1\n\
+29/12/2009,1\n\
+08/01/2010,3\n\
+15/01/2010,2\n\
+22/01/2010,2\n\
+31/01/2010,1\n\
+07/02/2010,1\n\
+21/02/2010,1\n\
+07/03/2010,1\n\
+07/04/2010,2\n\
+14/04/2010,1\n\
+07/05/2010,2\n\
+14/05/2010,1\n\
+21/05/2010,1\n\
+04/09/2010,1\n\
+14/10/2010,1\n\
+28/10/2010,1\n\
+07/11/2010,2\n\
+14/11/2010,1\n\
+01/01/2011,3\n\
+15/01/2011,2\n\
+29/01/2011,1\n\
+31/01/2011,1\n\
+07/02/2011,1\n\
+28/02/2011,1\n\
+21/03/2011,1\n\
+31/03/2011,1\n\
+07/04/2011,1\n\
+14/04/2011,1\n\
+28/04/2011,1\n\
+21/05/2011,1\n\
+31/05/2011,1\n\
+04/06/2011,1\n\
+07/06/2011,1\n\
+14/06/2011,2\n\
+21/06/2011,2\n\
+28/06/2011,1\n\
+07/07/2011,3\n\
+14/07/2011,3\n\
+28/07/2011,1\n\
+31/07/2011,1\n\
+07/08/2011,5\n\
+14/08/2011,1\n\
+21/08/2011,2\n\
+07/09/2011,2\n\
+14/09/2011,2\n\
+21/09/2011,4\n\
+28/09/2011,3\n\
+07/10/2011,2\n\
+21/10/2011,4\n\
+07/11/2011,1\n\
+28/11/2011,1\n\
+02/01/2012,3\n\
+09/01/2012,3\n\
+16/01/2012,4\n\
+30/01/2012,3\n\
+31/01/2012,2\n\
+07/02/2012,1\n\
+14/02/2012,1\n\
+21/02/2012,2\n\
+29/02/2012,1\n\
+07/03/2012,2\n\
+21/03/2012,2\n\
+28/03/2012,2\n\
+07/04/2012,4\n\
+14/04/2012,5\n\
+21/04/2012,2\n\
+28/04/2012,6\n\
+07/05/2012,1\n\
+14/05/2012,1\n\
+21/05/2012,6\n\
+28/05/2012,2\n\
+31/05/2012,1\n\
+07/06/2012,3\n\
+14/06/2012,1\n\
+21/06/2012,2\n\
+28/06/2012,3\n\
+21/07/2012,2\n\
+31/07/2012,2\n\
+07/08/2012,1\n\
+14/08/2012,3\n\
+21/08/2012,4\n\
+28/08/2012,1\n\
+07/09/2012,2\n\
+14/09/2012,2\n\
+21/09/2012,2\n\
+28/09/2012,3\n\
+30/09/2012,3\n\
+07/10/2012,1\n\
+14/10/2012,2\n\
+21/10/2012,4\n\
+07/11/2012,2\n\
+14/11/2012,4\n\
+21/11/2012,3\n\
+07/12/2012,4\n\
+14/12/2012,2\n\
+21/12/2012,2\n\
+28/12/2012,2\n\
+07/02/2013,3\n\
+14/02/2013,2\n\
+21/02/2013,1\n\
+07/03/2013,2\n\
+14/03/2013,1\n\
+21/03/2013,1\n\
+31/03/2013,3\n\
+04/04/2013,1\n\
+07/04/2013,2\n\
+07/05/2013,2\n\
+21/05/2013,3\n\
+28/05/2013,1\n\
+07/06/2013,3\n\
+21/06/2013,1\n\
+30/06/2013,1\n\
+07/07/2013,1\n\
+28/07/2013,1\n\
+07/08/2013,2\n\
+14/08/2013,1\n\
+21/08/2013,2\n\
+07/09/2013,1\n\
+14/09/2013,1\n\
+28/09/2013,1\n\
+",
+"\
+date,amountOfCommitters\n\
+01/01/2001,1\n\
+01/04/2001,1\n\
+01/05/2001,1\n\
+01/07/2001,1\n\
+01/10/2001,2\n\
+01/11/2001,2\n\
+01/12/2001,1\n\
+01/01/2002,1\n\
+01/02/2002,1\n\
+01/03/2002,3\n\
+01/04/2002,2\n\
+01/06/2002,4\n\
+01/07/2002,1\n\
+01/08/2002,4\n\
+01/09/2002,2\n\
+01/11/2002,1\n\
+01/12/2002,1\n\
+01/01/2003,1\n\
+01/02/2003,1\n\
+01/03/2003,1\n\
+01/04/2003,1\n\
+01/05/2003,1\n\
+01/12/2003,1\n\
+01/02/2004,1\n\
+01/06/2004,1\n\
+01/09/2004,3\n\
+01/10/2004,3\n\
+01/11/2004,1\n\
+01/12/2004,1\n\
+01/02/2006,3\n\
+01/03/2006,2\n\
+01/04/2006,1\n\
+01/05/2006,1\n\
+01/06/2006,2\n\
+01/07/2006,1\n\
+01/08/2006,2\n\
+01/09/2006,1\n\
+01/10/2006,1\n\
+01/11/2006,3\n\
+01/12/2006,2\n\
+01/01/2007,1\n\
+01/02/2007,2\n\
+01/03/2007,2\n\
+01/04/2007,1\n\
+01/05/2007,2\n\
+01/07/2007,1\n\
+01/08/2007,2\n\
+01/09/2007,1\n\
+01/10/2007,2\n\
+01/11/2007,1\n\
+01/12/2007,2\n\
+01/01/2008,1\n\
+01/02/2008,1\n\
+01/03/2008,1\n\
+01/04/2008,1\n\
+01/05/2008,2\n\
+01/06/2008,2\n\
+01/07/2008,2\n\
+01/08/2008,2\n\
+01/09/2008,2\n\
+01/10/2008,1\n\
+01/11/2008,2\n\
+01/12/2008,1\n\
+01/01/2009,2\n\
+01/02/2009,1\n\
+01/03/2009,1\n\
+01/04/2009,3\n\
+01/05/2009,3\n\
+01/06/2009,1\n\
+01/07/2009,1\n\
+01/08/2009,2\n\
+01/09/2009,2\n\
+01/10/2009,4\n\
+01/11/2009,1\n\
+01/12/2009,1\n\
+01/01/2010,2\n\
+01/02/2010,2\n\
+01/03/2010,1\n\
+01/04/2010,2\n\
+01/05/2010,2\n\
+01/08/2010,1\n\
+01/10/2010,1\n\
+01/11/2010,2\n\
+01/12/2010,1\n\
+01/01/2011,3\n\
+01/02/2011,2\n\
+01/03/2011,1\n\
+01/04/2011,1\n\
+01/05/2011,2\n\
+01/06/2011,3\n\
+01/07/2011,4\n\
+01/08/2011,8\n\
+01/09/2011,6\n\
+01/10/2011,6\n\
+01/11/2011,2\n\
+01/01/2012,4\n\
+01/02/2012,5\n\
+01/03/2012,5\n\
+01/04/2012,13\n\
+01/05/2012,9\n\
+01/06/2012,6\n\
+01/07/2012,2\n\
+01/08/2012,6\n\
+01/09/2012,5\n\
+01/10/2012,7\n\
+01/11/2012,5\n\
+01/12/2012,8\n\
+01/01/2013,8\n\
+01/02/2013,5\n\
+01/03/2013,4\n\
+01/04/2013,3\n\
+01/05/2013,6\n\
+01/06/2013,3\n\
+01/07/2013,2\n\
+01/08/2013,4\n\
+01/09/2013,3\n\
 "]
 /*data_placeholder*/;
     var projectName = /*project_name_placeholder*/"some project"/*project_name_placeholder*/;
@@ -547,7 +967,8 @@ date,amountOfCommitters\n\
         svg.append("defs").append("clipPath").attr("id", "brushClip")
                 .append("rect").attr("width", width).attr("height", height2);
 
-        var daysData = parseRawData(rawData, dateFormat);
+        var rawDataIndex = 0;
+        var daysData = parseRawData(rawData[rawDataIndex], dateFormat);
 
         var timeInterval = d3.time.day;
         var data = aggregate(daysData, timeInterval);
@@ -603,23 +1024,16 @@ date,amountOfCommitters\n\
         footerSpan.append("span").style({width: "20px", display: "inline-block"});
 
         footerSpan.append("label").html("Group by: ");
-        var groupByDropDown = footerSpan.append("select");
-        groupByDropDown.append("option").attr("value", "day").html("days");
-//        groupByDropDown.append("option").attr("value", "monday").html("weeks"); // TODO group in java code (it's incorrect to group here)
-        groupByDropDown.on("change", function() {
-            timeInterval = d3.time[this.value];
+        var dropDown = footerSpan.append("select");
+        dropDown.append("option").attr("value", "0").html("day");
+        dropDown.append("option").attr("value", "1").html("week");
+        dropDown.append("option").attr("value", "2").html("month");
+        dropDown.on("change", function() {
+            rawDataIndex = +this.value;
+            daysData = parseRawData(rawData[rawDataIndex], dateFormat);
+            timeInterval = d3.time[["day", "week", "month"][rawDataIndex]];
             updateChart();
         });
-        footerSpan.append("span").style({width: "20px", display: "inline-block"});
-
-//        var leftFooter = rootElement.append("span")
-//                .style("position", "absolute")
-//                .style("left", function(){ return svgPos.left + margin.left + "px"; });
-//        leftFooter.append("span").style("color", "#999").html("Total size: "); // TODO total amount of unique committers
-//        var totalChangeSizeLabel = leftFooter
-//                .append("span").style("color", "#999")
-//                .append("label").html("");
-
 
         updateChart();
 
@@ -748,8 +1162,8 @@ date,amountOfCommitters\n\
                                 return {date: date, amountOfCommitters: totalChangeSize };
                             })
                             .map(daysData)).filter(function (d) {
-                        return d.amountOfCommitters > 0;
-                    });
+                                return d.amountOfCommitters > 0;
+                            });
         }
 
         function nonZero(length) {
