better label text

--- a/templates/amount-of-committers-chart.html
+++ b/templates/amount-of-committers-chart.html
@@ -1022,7 +1022,7 @@ date,amountOfCommitters\n\
         });
         footerSpan.append("span").style({width: "20px", display: "inline-block"});
 
-        footerSpan.append("label").html("Group by: ");
+        footerSpan.append("label").html("Unique committers per: ");
         var dropDown = footerSpan.append("select");
         dropDown.append("option").attr("value", "0").html("day");
         dropDown.append("option").attr("value", "1").html("week");
