--- a/templates/changes-size-chart.html
+++ b/templates/changes-size-chart.html
@@ -37,6 +37,7 @@
 <body>
 <span id="change-size-chart"></span>
 <script src="d3.v3.min.js"></script>
+<script src="code-history.js"></script>
 <script>
     var rawData = /*data_placeholder*/
 ["\
@@ -209,7 +210,7 @@ date,changeSize\n\
         var yAxis = d3.svg.axis().scale(y).orient("left").tickFormat(valueFormat);
         var xAxisLabel = "Date";
         var yAxisLabel = "Change size";
-        var showOneMonthMean = false;
+        var showRollingAverage = false;
 
         var brush = d3.svg.brush().x(x2).on("brush", onBrush);
 
@@ -231,10 +232,10 @@ date,changeSize\n\
         var rawDataIndex = 0;
         var daysData = parseRawData(rawData[rawDataIndex], dateFormat);
 
-        var defaultTimeInterval = "month";
+        var defaultTimeInterval = "monday";
         var timeInterval = d3.time[defaultTimeInterval];
         var data = aggregate(daysData, timeInterval);
-        var meanData = [];
+        var rollingAverageData = [];
 
         var fromDate = data[0].date;
         var toDate = data[data.length - 1].date;
@@ -278,12 +279,12 @@ date,changeSize\n\
 
         var footerSpan = appendBlockElementTo(rootElement, width).append("span").style({float: "right"});
 
-        footerSpan.append("label").html("One month average: ");
+        footerSpan.append("label").html("Rolling average: ");
         var checkbox = footerSpan.append("input").attr("type", "checkbox").on("click", function() {
-            showOneMonthMean = !showOneMonthMean;
+            showRollingAverage = !showRollingAverage;
             updateChart();
         });
-        if (showOneMonthMean) checkbox.attr("checked", "checked");
+        if (showRollingAverage) checkbox.attr("checked", "checked");
 
         footerSpan.append("span").style({width: "20px", display: "inline-block"});
 
@@ -327,7 +328,7 @@ date,changeSize\n\
 
         function updateChart() {
             data = aggregate(daysData, timeInterval);
-            meanData = calculateMonthlyMean(data);
+            rollingAverageData = rollingAverage(data, timeInterval);
 
             x.domain([fromDate, timeInterval.offset(toDate, 1)]);
             y.domain([0, d3.max(data, function(d) { return d.changeSize; })]);
@@ -401,9 +402,9 @@ date,changeSize\n\
                     .attr("width", barWidth);
 
             zoomedView.selectAll(".line").remove();
-            if (showOneMonthMean) {
+            if (showRollingAverage) {
                 zoomedView.append("path")
-                        .datum(meanData)
+                        .datum(rollingAverageData)
                         .attr("class", "line")
                         .attr("clip-path", "url(#chartClip)")
                         .attr("d", meanLine);
@@ -459,31 +460,6 @@ date,changeSize\n\
 
         function appendBlockElementTo(element, width) {
             return element.append("span").style({display: "block", width: width + "px"});
-        }
-
-        function calculateMonthlyMean(data) {
-            var period = 30;
-            var result = [];
-            var datesRange = d3.time.day.range(data[0].date, data[data.length - 1].date);
-            var changeSize = changeSizeByDay(data, datesRange);
-
-            var mean = d3.mean(datesRange.slice(0, period - 1), function(date){ return changeSize[date]; });
-
-            for (var i = period; i < datesRange.length; i++) {
-                var date = datesRange[i];
-                var dateToExclude = datesRange[i - period];
-                mean += (changeSize[date] - changeSize[dateToExclude]) / period;
-                result.push({date: date, mean: mean});
-            }
-
-            return result;
-        }
-
-        function changeSizeByDay(data, datesRange) {
-            var result = {};
-            datesRange.forEach(function(date) { result[date] = 0; });
-            data.forEach(function(d) { result[d.date] = d.changeSize; });
-            return result;
         }
 
         function removeChildrenOf(elementId) {
